# r-backups

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/: pull_request_template.md
docs/: portuguese.md  spanish.md
src/: config.rs  files.rs  handler.rs  main.rs  utils.rs  vars.rs
src/commands/: backup.rs  config.rs  count.rs  createdb.rs  drop.rs  enums.rs  execute.rs  generate_migration.rs  init.rs  list.rs  migration.rs  migration_down.rs  migration_up.rs  mod.rs  rename.rs  restore.rs  update.rs
src/database/: backup.rs  client.rs  db.rs  migration.rs  mod.rs  restore.rs  update.rs
src/sql/: add_config.sql  down_migration.sql  get_config.sql  init.sql  migration_template.sql  up_migration.sql
src/templates/: migration-template.sql  r-backups.json
